2012-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RInside.h: Added two new boolean arguments to
	constructor to set verbose and/or interactive mode; verbose mode can
	also be changed via a setter function.
	* src/RInside.cpp: Corresponding implementation

	* inst/examples/standard/rinside_sample13.cpp: New example
	illustrating the new more fault-tolerant modes

2012-10-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RInside.h: Added non-throwing variants of parseEval()
	and parseEvalQ() (which add 'NT' to the function name)
	* src/RInside.cpp: Implementation of non-throwing parseEval() variants

	* inst/examples/qt/qtdensity.cpp: Made more tolerant of bad user
	input by evaluating via non-calling function, and assigning to a
	temporary variable first.
	* inst/examples/wt/wtdensity.cpp: Dito

2012-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Applied (modified) patch by Theodore Lytras which
	lets us recover from parsing errors on erroneous input lines

2012-10-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_test2.cpp: Simple new test to check
	the search path

2012-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp (initialize): On Windows, if R_HOME is not set as
	an environment variable, use R's get_R_HOME() to get it from registry

2012-09-13  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/Makefile.win: Added more explicit statement
	about the need to set R_HOME on Windows to run the binaries, or to
	install RInside from sources on Windows so that R_HOME is set that way

2012-09-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.8

2012-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Include local headers from src/
	* src/Makevars{.win}: Declare explicit dependency on headers for
	RInside.cpp

2012-09-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Updating required headers here now